--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "command-exists": "^1.2.9",
     "commander": "^6.0.0",
     "hg": "^0.3.3",
-    "isomorphic-git": "^1.7.4"
+    "isomorphic-git": "^1.7.4",
+    "rimraf": "^3.0.2"
   }
 }
